# ComfyUI-Notifications

./: README.md  __init__.py  pyproject.toml
nodes/: play_sound.py  system_notification.py  unified_notification.py  util.py  webhook.py
web/: play_sound.js  system_notification.js  unified_notification.js  util.js
